Pre-submission commit

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ install_github("jaredhomola/WFUrbanAdaptation")
 5. diversityECDF.R: Genetic diversity empirical cumulative density function
 6. neiGst.R: Genetic differentiation
 7. multivariateAnalyses.R: Multivariate analyses including DAPCs and PCoAs
-8. outlierAnalysis.R: Outlier analysis using percentile-based approach across replicates
+8. outlierAnalysis.R: Outlier analysis using percentile-based approach across replicates. Also include allele and genotype frequency plots.
 9. logisticRegressionGEA.R: Genotype-environment association analysis using logistic regression
 
 ### Contact
